@@ -22,6 +22,11 @@ show_config = 1
 show_uname = 1
 uname_args = -s -o -r -m -i
 
+[Git::Contributors / @Author::KENTNL/Git::Contributors]
+include_authors = 0
+include_releaser = 0
+order_by = name
+
 [Git::GatherDir / @Author::KENTNL/Git::GatherDir]
 exclude_filename = README
 exclude_filename = README.mkdn
@@ -74,7 +79,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.016008
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.016009
 
 [MinimumPerl / @Author::KENTNL/MinimumPerl]
 
@@ -156,6 +161,7 @@ Dist::Zilla::Plugin::EOLTests = 0
 Dist::Zilla::Plugin::Git::Check = 0
 Dist::Zilla::Plugin::Git::Commit = 0
 Dist::Zilla::Plugin::Git::CommitBuild = 0
+Dist::Zilla::Plugin::Git::Contributors = 0
 Dist::Zilla::Plugin::Git::GatherDir = 0
 Dist::Zilla::Plugin::Git::NextRelease = 0
 Dist::Zilla::Plugin::Git::Tag = 0
