@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 2.016009
+ [Added / runtime requires]
+ - Dist::Zilla::Plugin::Git::Contributors 0.004
 
 2.016008 2014-08-11T10:42:36Z
  [Changed / runtime requires]
