@@ -1,6 +1,11 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 2.016009
+ [Added / develop requires]
+ - Dist::Zilla::Plugin::Git::Contributors 0.004
+
+ [Added / runtime requires]
+ - Dist::Zilla::Plugin::Git::Contributors 0.004
 
 2.016008 2014-08-11T10:42:36Z
  [Changed / develop requires]
