@@ -1,6 +1,8 @@
 This file contains changes to DEVELOPMENT dependencies only ( both REQUIRED and OPTIONAL )
 
 2.016009
+ [Added / develop requires]
+ - Dist::Zilla::Plugin::Git::Contributors 0.004
 
 2.016008 2014-08-11T10:42:36Z
  [Changed / develop requires]
