@@ -1,6 +1,13 @@
 ﻿Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ [00 Minor]
+ - Start using Git::Contributors.
+
+ [Dependencies::Stats]
+ - Dependencies changed since 2.016008, see misc/*.deps* for details
+ - develop: +1
+ - runtime: +1
 
 2.016008 2014-08-11T10:42:36Z
  [00 Minor]
